# rp2040-flash-wake

./: .gitignore  Cargo.toml  README.md  flake.nix  link.x  memory.x
.cargo/: config
src/: byte_str.rs  cmdline.rs  main.rs
