[package]
name = "rp2040-flash-wake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt-macros = "0.7.0"
panic-halt = "0.2.0"
rp-pico = { version = "0.8.0", default-features = false, features = ["rom-func-cache", "rt"] }
rp2040-hal = { version = "0.9.1", features = ["critical-section-impl"] }
rp2040-pac = { version = "0.5.0", features = ["rt", "critical-section"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
